Add authors collection with full CRUD
