# routes/authors.js
@@ -1,0 +1,17 @@
+const express = require('express');
+const router = express.Router();
+const {
+  getAllAuthors,
+  getAuthorById,
+  createAuthor,
+  updateAuthor,
+  deleteAuthor
+} = require('../controllers/authors');
+
+router.get('/', getAllAuthors);
+router.get('/:id', getAuthorById);
+router.post('/', createAuthor);
+router.put('/:id', updateAuthor);
+router.delete('/:id', deleteAuthor);
+
+module.exports = router;
