# routes/index.js
@@ -1,5 +1,6 @@
 const router = require('express').Router();
 
 router.use('/books', require('./books'));
+router.use('/authors', require('./authors'));
 
 module.exports = router;
